added delete function

--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/main.css">
-<script src="js/script.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
 
 
-  <div  id="myDIV" class="header">
-    <h2 style="margin:5px">My To Do List</h2>
-    <form action="post" id="form">
-      <input type="text" placeholder="New todo..." id="newTask">
-     <input type="button" value="add" onclick="add()" class="addBtn">
-     
+  <div id="myDIV" class="header">
+    <h2 style="margin:5px">List of groceries to buy</h2>
+    <form id="form">
+
+      <input type="text" placeholder="New item..." id="newItem">
+
+      <button type="submit" id="addItem" class="addItem">Add</button>
+
     </form>
   </div>
 
-    <ul id="List"></ul> <span id="delete" class="delete" onclick="del()" style="display: none; float: right;">x</span>
+  <ul id="list">
+    <!-- <li>Todo One <button id="del" style="float: right;" class="del">x</button></li> -->
+
+  </ul> 
  
+  <script src="js/script.js"></script>
 </body>
+
+
 </html>
